--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,31 +1,91 @@
 $font-stack: 'Open Sans', sans-serif;
 $primary-color: #4A4A4A;
 $secondary-color: #5A4FCF;
+$hover-light: #BABABA;
 $bg-color: #F7F5F2;
 
+@mixin smooth_transition() {
+	-webkit-transition: all 0.30s ease-in-out;
+	-moz-transition: all 0.30s ease-in-out;
+	-ms-transition: all 0.30s ease-in-out;
+	-o-transition: all 0.30s ease-in-out;
+}
+
+@mixin smooth_transition_ease($num) {
+	-webkit-transition: all $num ease;
+	-moz-transition: all $num ease;
+	-o-transition: all $num ease;
+	transition: all $num ease;
+}
+
+@mixin large-letter-hover($pos) {
+	@extend .large-letter;
+	position: absolute;
+	top: $pos;
+	background-color: $hover-light;
+	color: $bg-color;
+	z-index: -2;
+}
+
 html, body {
-  height: 100%;
+	overflow-y: hidden;
+	overflow-x: hidden;
+	height: 100%;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 
 body {
 	background-color: $bg-color;
 	color: $primary-color;
 	font-family: $font-stack;
-	margin: 0px 230px;
+}
+
+// columns
+
+.clicksquare {
+	height: 110px;
+	width: 110px;
+	background-color: $primary-color;
+	position: absolute;
+	top: 110px;
+	z-index: -1;
+}
+
+.clicksquareRight {
+	height: 110px;
+	width: 110px;
+	background-color: $bg-color;
+	position: absolute;
+	top: 110px;
+	z-index: -1;
+}
+
+// for padding and margin to be included in the width
+* {
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box
+}
+
+#toggle {
+	width: 100px;
+	height: 100px;
+	background: #ccc;
+}
+
+.hidden {
+	display: none;
+}
+
+.hiddenV {
+	@include smooth_transition_ease(0.5s);
+	visibility: hidden;
 }
 
 .large {
 	font-size: 100px;
-}
-
-
-.firstname {
-	@extend .large;
-	position: absolute;
-	bottom: 0%;
-    right: 0%;
-    color: $secondary-color;
-    padding-bottom: 20px;
 }
 
 .large-letter {
@@ -36,22 +96,39 @@ body {
 	display: inline-block;
 	text-align: center;
 	vertical-align: middle;
-}
-
-.large-letter-selected {
-	@extend .large-letter;
-	background-color: $primary-color;
-	color: $bg-color;
+	background-color: transparent;
+	// @include smooth_transition();
+	&:hover {
+		cursor: pointer;
+		// background-color: $hover-light;
+	}
 }
 
 .large-letter-m {
+	@extend .large-letter;
 	font-size: 80px;
-	height: 110px;
-	width: 110px;
-	line-height: 110px; 
-	display: inline-block;
-	text-align: center;
-	vertical-align: middle;
+}
+
+#m-hover {
+	@include large-letter-hover(0px)
+}
+
+#a-hover {
+	@include large-letter-hover(110px)
+}
+
+#r-hover {
+	@include large-letter-hover(220px)
+}
+
+.large-letter-text {
+	color: $primary-color;
+	@include smooth_transition_ease(2s);
+}
+
+.large-letter-text-selected {
+	color: $bg-color;
+	@include smooth_transition_ease(2s);
 }
 
 .large-letter-selected-m  {
@@ -60,24 +137,215 @@ body {
 	color: $bg-color;
 }
 
+
+.square {
+	height: 110px;
+	width: 110px;
+	background-color: $primary-color;
+	position: absolute;
+	top: -110px;
+	z-index: -1;
+}
+
 .full {
+	width: 865px;
 	height: 100%;
 	position: relative;
+	margin: 0px auto;
 }
 
 .happy {
+	width: 110px;
 	margin-top: 40px;
-	display: inline-block;
+	position: relative;
+	float: left;
+}
+
+.happy2 {
+	width: 110px;
+}
+
+.holder2 {
+	float: left;
+	width: 220px;
+	height: 100%;
+	background-color: $primary-color;
+	position: relative;
+	// needs to be less than clickSquareRight
+	z-index: -100;
 }
 
 .text {
-	font-size: 24px;
+	font-size: 28px;
 	height: 110px;
 	width: 110px;
-	line-height: 110px; 
-	background-color: $primary-color;
-	color: $bg-color;
-	display: inline-block;
-		text-align: center;
-	vertical-align: middle;
+	background-color: transparent;
+	// color: $bg-color;
+	position: relative;
 }
+
+.bgcolor {
+	color: $bg-color;
+	@include smooth_transition_ease(0.5s);
+}
+
+#m-text, #a-text, #r-text {
+	@include smooth_transition_ease(0.5s);
+}
+
+
+.text-selected {
+	@extend .text;
+	color: $primary-color;
+}
+
+.text:not(.text-m) span {
+	margin: 10px 10px;
+	position: absolute;
+	bottom: 0px;
+}
+
+#m-text {
+	font-size: 48px;
+	position: absolute;
+	bottom: 0px;
+	margin: 10px 15px;
+}
+
+.block {
+	width: 100%;
+	position: absolute;
+	top: 0px;
+	height: 45px;
+	background-color: $primary-color;
+	z-index: -50;
+}
+
+#blockslide-first-letter {
+	width: 100%;
+	position: absolute;
+	top: 45px;
+	height: 136px;
+	background-color: $primary-color;
+	z-index: -50;
+}
+
+.first-letter-holder {
+	line-height: 181px;
+	font-size: 200px;
+	color: $bg-color;
+	margin: 0px auto;
+	text-align: center;
+	position: relative;
+	top: 55px;
+	z-index: -1;
+}
+
+.first-letter {
+	z-index: 1;
+	background-color: transparent;
+}
+
+.masterholder3 {
+	// margin-top: 20px;
+	height: 100%;
+	float: left;
+	position: relative;
+}
+
+.holder3 {
+	margin-top: 40px;
+	width: 535px;
+	height: 390px;
+	background-color: transparent;
+	padding: 20px;
+	display:table;
+}
+
+#desc-block {
+	margin-top: 40px;
+	width: 535px;
+	height: 390px;
+	background-color: $primary-color;
+	position: absolute;
+	z-index: -1;
+	top: 0px;
+}
+
+.desc {
+	display: table-cell;
+	vertical-align: middle;
+	color: $bg-color;
+	font-size: 16px;
+}
+
+.bottom-right-holder {
+	position: relative;
+	overflow-x: visible;
+	white-space: nowrap; 
+}
+
+.name-bottom-right {
+	float: left;
+	background-color: transparent;
+	font-size: 100px;
+}
+
+#bottom-right-block {
+	width: 413px;
+	height: 136px;
+	position: absolute;
+	top: 0px;
+	background-color: $primary-color;
+	z-index: -1;
+}
+
+#bottom-right-slide {
+	float: left;
+	width: 5000px;
+	height: 136px;
+	background-color: red;
+	position: absolute;
+	z-index: -100;
+}
+
+#slidehappy {
+	background-color: $primary-color;
+	width: 400px;
+	height: 136px;
+	position: relative;
+	top: 60px;
+	right: 275px;
+	z-index: -100;
+}
+
+// Sprite stuff
+.sprites {
+	position: absolute;
+	right: 20px;
+}
+
+.icons {
+	margin: 2px;
+	@include smooth_transition();
+	&:hover {
+		transform:scale(1.03);
+		-ms-transform:scale(1.03); 
+		-moz-transform:scale(1.03); 
+		-webkit-transform:scale(1.03); 
+		-o-transform:scale(1.03);
+	}
+}
+
+// .fb {
+// 	background: url('sprites.png') no-repeat -27px -37px;
+// 	background-size: 360px 216px;
+// 	width: 144px;
+// 	height: 144px;
+// }
+
+// .linkedin:hover {
+//   background: url(/assets/smi32.png) no-repeat -128px -5px;
+//   width: 32px;
+//   height: 32px;
+// }
