--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div id="notification" class="hidden">
 	<p>
-		Sorry for the inconvenience, my website is not yet available on mobile devices yet. Please view my site on a regular-sized computer screen I'll be working on this soon! 
+		Sorry for the inconvenience, my website is not yet available for mobile devices and screen sizes less than 865 pixels wide. Please view my site on a regular-sized computer screen.I'll be working on responsiveness soon!
 	</p>
 </br>
 </br>
