trying overflow visible

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -63,7 +63,7 @@
 				<span id="m-text">y</span>
 			</div>
 			<div class="text-selected">
-				<span id="a-text">bou</span>
+				<span id="a-text">bout</span>
 			</div>
 			<div class="clicksquareRight"></div>
 			<div class="text">
