--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -465,7 +465,7 @@
 
 	.tabrow li, .tabrow2 li {
 		margin: 0px 6px;
-		padding: 0 10px;
+		padding: 0px 10px 10px 10px;
 		background-color: $primary-color;
 		color: $bg-color;
 		display: inline-block;
