add some microdata for rich snippets following schema.org

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -99,9 +99,9 @@
 				<%= link_to( image_tag(asset_path('mail-white.png'), height: '30', width:'30', class: "icons"), "mailto:derrickmar1215@berkeley.edu", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
 				<%= link_to( image_tag(asset_path('linkedin.png'), height: '30', width:'30', class: "icons"), "http://www.linkedin.com/pub/derrick-mar/26/634/411", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
 			</div>
-			<div id="aboutDesc"> 
+			<div itemscope itemtype="http://data-vocabulary.org/Person" id="aboutDesc"> 
 				<p id="about">
-					Derrick Mar is a 2nd year undergraduate at UC Berkeley double majoring in Business and Computer Science. He is interested in entrepreneurship as a means to invoke social change.
+					<span itemprop="name">Derrick Mar</span> is a <span itemprop="title">3nd year undergraduate at UC Berkeley</span> double majoring in Business and Computer Science. He is interested in entrepreneurship as a means to invoke social change.
 				</p>
 			</div>
 			<div id="projectsDesc" class="hidden"> 
