added meta description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
 	<%= favicon_link_tag 'd-favicon.png' %>
+	<meta name="description" content="Derrick Mar is an undergraduate at UC Berkeley double majoring in Business and Computer Science. Browse his projects and more!">
 </head>
 <body>
 	<%= yield %>
