attempting to add rails blgo

--- a/app/views/static_pages/_projects.html.erb
+++ b/app/views/static_pages/_projects.html.erb
@@ -1,6 +1,6 @@
 <div id="tasksimply" class="descOpp">
 	<div class="projectTitleHolder">
-		<%= link_to( image_tag(asset_path('t.png'), height: '90', width:'90', class: "left"), "http://tasksimply.herokuapp.com/", target:"_blank") %>
+		<%= link_to( image_tag('t.png', height: '90', width:'90', class: "left"), "http://tasksimply.herokuapp.com/", target:"_blank") %>
 		<div class="projectTitleContent">
 			<span class="project-title"><%= link_to "TaskSimply", "http://tasksimply.herokuapp.com/", target:"_blank"%></span>
 			<div> 
@@ -19,7 +19,7 @@
 </div>
 <div id="jump61" class="descOpp hidden">
 	<div class="projectTitleHolder">
-		<%= image_tag(asset_path('jump61.png'), height: '90', width:'90', class: "left") %>
+		<%= image_tag('jump61.png', height: '90', width:'90', class: "left") %>
 		<div class="projectTitleContent">
 			<span class="project-title">Jump61</span>
 			<div> 
@@ -36,7 +36,7 @@
 </div>
 <div id="gymscribe" class="descOpp hidden">
 	<div class="projectTitleHolder">
-		<%= link_to( image_tag(asset_path('gym.png'), height: '90', width:'90', class: "left"), "https://play.google.com/store/apps/details?id=edu.berkeley.cs160.lasercats", target:"_blank") %>
+		<%= link_to( image_tag('gym.png', height: '90', width:'90', class: "left"), "https://play.google.com/store/apps/details?id=edu.berkeley.cs160.lasercats", target:"_blank") %>
 		<div class="projectTitleContent">
 			<span class="project-title"><%= link_to "Gym Scribe", "https://play.google.com/store/apps/details?id=edu.berkeley.cs160.lasercats", target:"_blank"%></span>
 			<div> 
