--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
 <div id="jump61popup" class="popup" style="display: none;">
 	<div class="popup-content-holder">
 		<div class="title-and-pic">
-			<%= image_tag(asset_path('jump61.png'), height: '45', width:'45', class: "left") %>
+			<%= image_tag('jump61.png', height: '45', width:'45', class: "left") %>
 			<div class="projectTitleContent">
 				<span class="project-title">Jump61</span>
 			</div>
@@ -90,14 +90,14 @@
 		</ul>	
 		<div class="holder3">
 			<div id-"sprite1" class="sprites">
-				<%= link_to( image_tag(asset_path('fb.png'), height: '30', width:'30', class: "icons"), "https://www.facebook.com/derricklmar", target:"_blank", title:"Facebook") %>
-				<%= link_to( image_tag(asset_path('mail.png'), height: '30', width:'30', class: "icons"), "mailto:derrickmar1215@berkeley.edu", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
-				<%= link_to( image_tag(asset_path('linkedin-white.png'), height: '30', width:'30', class: "icons"), "http://www.linkedin.com/pub/derrick-mar/26/634/411", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
+				<%= link_to( image_tag('fb.png', height: '30', width:'30', class: "icons"), "https://www.facebook.com/derricklmar", target:"_blank", title:"Facebook") %>
+				<%= link_to( image_tag('mail.png', height: '30', width:'30', class: "icons"), "mailto:derrickmar1215@berkeley.edu", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
+				<%= link_to( image_tag('linkedin-white.png', height: '30', width:'30', class: "icons"), "http://www.linkedin.com/pub/derrick-mar/26/634/411", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
 			</div>
 			<div id="sprites2" class="sprites">
-				<%= link_to( image_tag(asset_path('fb-white.png'), height: '30', width:'30', class: "icons"), "https://www.facebook.com/derricklmar", target:"_blank", title:"Facebook") %>
-				<%= link_to( image_tag(asset_path('mail-white.png'), height: '30', width:'30', class: "icons"), "mailto:derrickmar1215@berkeley.edu", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
-				<%= link_to( image_tag(asset_path('linkedin.png'), height: '30', width:'30', class: "icons"), "http://www.linkedin.com/pub/derrick-mar/26/634/411", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
+				<%= link_to( image_tag('fb-white.png', height: '30', width:'30', class: "icons"), "https://www.facebook.com/derricklmar", target:"_blank", title:"Facebook") %>
+				<%= link_to( image_tag('mail-white.png', height: '30', width:'30', class: "icons"), "mailto:derrickmar1215@berkeley.edu", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
+				<%= link_to( image_tag('linkedin.png', height: '30', width:'30', class: "icons"), "http://www.linkedin.com/pub/derrick-mar/26/634/411", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
 			</div>
 			<div itemscope itemtype="http://data-vocabulary.org/Person" id="aboutDesc"> 
 				<p id="about">
