--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -635,3 +635,10 @@
 			@include scale(1.03);
 		}
 	}
+
+	.rails_blog {
+		position: absolute;
+		color: $primary-color;
+		top: 5px;
+		right: -100px
+	}
