--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -98,6 +98,7 @@
 				<%= link_to( image_tag('fb-white.png', height: '30', width:'30', class: "icons"), "https://www.facebook.com/derricklmar", target:"_blank", title:"Facebook") %>
 				<%= link_to( image_tag('mail-white.png', height: '30', width:'30', class: "icons"), "mailto:derrickmar1215@berkeley.edu", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
 				<%= link_to( image_tag('linkedin.png', height: '30', width:'30', class: "icons"), "http://www.linkedin.com/pub/derrick-mar/26/634/411", target:"_blank", title:"derrickmar1215@berkeley.edu") %>
+				<%= link_to "> Rails Blog", "/rails_blog", class: "rails_blog" %>
 			</div>
 			<div itemscope itemtype="http://data-vocabulary.org/Person" id="aboutDesc"> 
 				<p id="about">
